Margin ALignment Fixed & Color Changed

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,11 @@
 }
 
 #head-txt{
-  font-family: 'Poppins', sans-serif;
-  font-size: 2rem;
-  font-weight: 700;
-  padding: 2rem;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 900;
   text-transform: uppercase;
-filter: opacity(87%);
+  filter: opacity(87%);  
+   margin-bottom: 2rem;
+   color: #eb4d4c
 }
