--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -55,7 +55,7 @@ ul{
     
 }
 #customer-query{
-    font-family: "Poppins", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 0.6rem;
     font-weight: 600;
     filter: opacity(87%);
