--- a/src/components/Navbar/nav.css
+++ b/src/components/Navbar/nav.css
@@ -21,7 +21,7 @@ $color5: #33312eff; */
 
 
 #nav-brand{
-    color:#611BE7 ;
+    color: #1e827a;
     font-size: 1.6rem;
     font-family:'logotxt';
     font-weight: 800;
